Clean index.js file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <script defer src="index.js"></script>
     </head>
     <body>
-        <div id="mapid"></div>
+        <div id="mapid" class="map-container"></div>
     </body>
 </html>
