Remove map id, add map data-attribute to get element in js

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <script defer src="index.js"></script>
     </head>
     <body>
-        <div id="mapid" class="map-container"></div>
+        <div data-map="main" class="map-container"></div>
     </body>
 </html>
